--- a/01-spring-boot-web-application/pom.xml
+++ b/01-spring-boot-web-application/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.6</version>
         </dependency>
+        <dependency>							<!-- Added -->
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap-datepicker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
