--- a/01-spring-boot-web-application/pom.xml
+++ b/01-spring-boot-web-application/pom.xml
@@ -43,6 +43,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>											<!-- Added -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		
 		<!-- To enable .jsp support in embedded Tomcat server! -->
 		<dependency>
@@ -63,7 +67,7 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.6</version>
         </dependency>
-        <dependency>							<!-- Added -->
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap-datepicker</artifactId>
             <version>1.0.1</version>
