--- a/01-spring-boot-web-application/src/main/resources/application.properties
+++ b/01-spring-boot-web-application/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #logging.level.com.imh.sprinframework.web=debug
 logging.level.org.springframework.web=info
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
