--- a/01-spring-boot-web-application/pom.xml
+++ b/01-spring-boot-web-application/pom.xml
@@ -51,10 +51,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		--> 
+		<!-- Oracle database driver -->
+		<dependency>
+    		<groupId>com.oracle</groupId>
+    		<artifactId>ojdbc8</artifactId>
+    		<version>12.2.0.1</version>
+    		<scope>provided</scope>
 		</dependency>
 		
 		<!-- To enable .jsp support in embedded Tomcat server! -->
