--- a/01-spring-boot-web-application/src/main/resources/application.properties
+++ b/01-spring-boot-web-application/src/main/resources/application.properties
@@ -1,7 +1,26 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+#H2 in-memory database (deactivated on step 32)
+spring.h2.console.enabled=false
+
+# create and drop tables and sequences, loads import.sql
+spring.jpa.show-sql=true
+
+# logging settings
 #logging.level.com.imh.sprinframework.web=debug
 logging.level.org.springframework.web=info
+logging.level.org.hibernate.SQL=debug
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+### Step 32: Connecting JPA to Oracle database
+
+# use create when running the app for the first time, then change to "update" which just updates the schema when necessary
+spring.jpa.hibernate.ddl-auto=create-drop
+#hibernate configurations
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+spring.datasource.url=jdbc:oracle:thin:@//localhost:32118/XEPDB2
+spring.datasource.username=pdb_adm
+spring.datasource.password=Oradoc_db1
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
